--- a/src/MH/MailBundle/Resources/views/Template/texte_separation.html.twig
+++ b/src/MH/MailBundle/Resources/views/Template/texte_separation.html.twig
@@ -1,4 +1,4 @@
-                    <!-- Debut bloc footer-reseau sociaux -->
+                    <!-- Debut bloc texte separation -->
 
                     <tr bgcolor="#{{ post.texte.bgcouleur }}">
                         <td height="{{ post.texte.hauteur }}">&nbsp;</td>
@@ -11,4 +11,4 @@
                         <td height="{{ post.texte.hauteur }}">&nbsp;</td>
                     </tr>
 
-                    <!-- Fin bloc footer-reseau sociaux -->
+                    <!-- Fin bloc texte separation -->
