--- a/src/MH/MailBundle/Resources/views/PostType/footer_admission.html.twig
+++ b/src/MH/MailBundle/Resources/views/PostType/footer_admission.html.twig
@@ -5,12 +5,12 @@
 {% endblock %}
 
 {% block bundle_body %}
-    <h2>Ajout Footer Admission</h2>
+    <h2>{{ post.slug }}</h2>
     <hr>
     <div id="contain" >
         <div class="well">
             <h4>Rendu Actuel</h4>
-            <img src="{{ asset('bundles/mhmail/images/footer_admission.JPG') }}" alt="Exemple de rendu de header" width="700"  />
+            <img src="{{ asset('bundles/mhmail/images/'~post.slug~'.jpg') }}" alt="Exemple de rendu de header" width="700"  />
 
             <hr>
             {{ form(form) }}
