--- a/src/MH/MailBundle/Resources/views/PostType/header.html.twig
+++ b/src/MH/MailBundle/Resources/views/PostType/header.html.twig
@@ -5,15 +5,15 @@
 {% endblock %}
 
 {% block bundle_body %}
-    <h2>Header</h2>
+    <h2>{{ post.slug }}</h2>
     <hr>
     <div id="contain" >
         <div class="well">
             <h4>Rendu Actuel</h4>
             {% if post.header is not null %}
-                {% include "MHMailBundle:Template:header.html.twig" ignore missing %}
+                {% include "MHMailBundle:Template:"~post.slug~".html.twig" ignore missing %}
             {% else %}
-                <img src="{{ asset('bundles/mhmail/images/Header-emailling_02.jpg') }}" alt="Exemple de rendu de header" height="200"  />"
+                <img src="{{ asset('bundles/mhmail/images/'~post.slug~'.jpg') }}" alt="Exemple de rendu de header" height="200"  />"
             {% endif %}
             <hr>
             {{ form(form) }}
