couleur working with ID setting texte management with paragraphes

--- a/src/MH/MailBundle/Resources/views/Template/texte_separation.html.twig
+++ b/src/MH/MailBundle/Resources/views/Template/texte_separation.html.twig
@@ -1,13 +1,13 @@
                     <!-- Debut bloc texte separation -->
 
-                    <tr bgcolor="#{{ post.texte.bgcouleur }}">
+                    <tr bgcolor="#{{ post.texte.couleurFond }}">
                         <td height="{{ post.texte.hauteur }}">&nbsp;</td>
                     </tr>
-                    <tr bgcolor="#{{ post.texte.bgcouleur }}">
+                    <tr bgcolor="#{{ post.texte.couleurFond }}">
                         <td style="font-size: 16px; font-family: Arial, sans-serif; color:#{{ post.texte.couleur }}" align="center" valign="middle"><strong>{{ post.texte.texte }}<br />
                             </strong></td>
                     </tr>
-                    <tr bgcolor="#{{ post.texte.bgcouleur }}">
+                    <tr bgcolor="#{{ post.texte.couleurFond }}">
                         <td height="{{ post.texte.hauteur }}">&nbsp;</td>
                     </tr>
 
