add Adminbundle and color gestion and paragraphe working on

--- a/src/MH/MailBundle/Resources/views/Template/texte_separation.html.twig
+++ b/src/MH/MailBundle/Resources/views/Template/texte_separation.html.twig
@@ -4,7 +4,7 @@
                         <td height="{{ post.texte.hauteur }}">&nbsp;</td>
                     </tr>
                     <tr bgcolor="#{{ post.texte.couleurFond }}">
-                        <td style="font-size: 16px; font-family: Arial, sans-serif; color:#{{ post.texte.couleur }}" align="center" valign="middle"><strong>{{ post.texte.texte }}<br />
+                        <td style="font-size: 16px; font-family: Arial, sans-serif; color:#{{ post.texte.texte.couleur }}" align="center" valign="middle"><strong>{{ post.texte.texte.paragraphes | first }}<br />
                             </strong></td>
                     </tr>
                     <tr bgcolor="#{{ post.texte.couleurFond }}">
