--- a/src/MH/MailBundle/Resources/views/PostType/bloc_photo_texte.html.twig
+++ b/src/MH/MailBundle/Resources/views/PostType/bloc_photo_texte.html.twig
@@ -17,11 +17,73 @@
                     </tbody>
                 </table>
             {% else %}#}
+
                 <img src="{{ asset('bundles/mhmail/images/'~post.slug~'.jpg') }}" alt="Exemple de texte & photo" width="700"  />
             {#{% endif %}#}
 
             <hr>
-            {{ form(form) }}
+            {{ form_start(form) }}
+            {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
+            {{ form_errors(form) }}
+            <div class="form-group">
+                {{ form_label(form.titre, "Titre", {'label_attr': {'class': 'col-sm-3 control-label'}}) }}
+                {{ form_errors(form.titre) }}
+                <div class="col-sm-9">
+                    {{ form_widget(form.titre, {'attr': {'class': 'form-control'}}) }}
+                </div>
+            </div>
+            <br>
+            <br>
+            <div class="form-group">
+                {{ form_label(form.couleurTitre, "Couleur du Titre", {'label_attr': {'class': 'col-sm-3 control-label'}}) }}
+                {{ form_errors(form.couleurTitre) }}
+                <div class="col-sm-9">
+                    {{ form_widget(form.couleurTitre, {'attr': {'class': 'form-control'}}) }}
+                </div>
+            </div>
+            <br>
+            <br>
+            {{ form_label(form.lien, "Lien", {'label_attr': {'class': 'col-sm-3 control-label'}}) }}
+            <div class="form-group">
+                <div class="col-sm-9">
+                    {{ form_row(form.lien.href) }}
+                    {{ form_row(form.lien.alt) }}
+                    {{ form_row(form.lien.target) }}
+                </div>
+            </div>
+            {{ form_label(form.couleurFond, "Couleur Fond", {'label_attr': {'class': 'col-sm-3 control-label'}}) }}
+            <div class="form-group">
+                <div class="col-sm-9">
+                    {{ form_row(form.couleurFond) }}
+                </div>
+            </div>
+            <br><br>
+            <div class="form-group">
+                {{ form_label(form.image, "Image", {'label_attr': {'class': 'col-sm-3 control-label'}}) }}
+                <div class="col-sm-9">
+                    {{ form_row(form.image.src) }}
+                    {{ form_row(form.image.alt) }}
+                    {{ form_row(form.image.description) }}
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group">
+                    <div class="col-sm-3">
+                        <a id="hide" class="btn btn-link">Hide/Show Paragraphe</a>
+                    </div>
+                    <div id="paragraphe">
+                        <div class="col-sm-9">
+                            {{ form_row(form.texte) }}
+                            <a href="#" id="add_paragraphe" class="btn btn-primary">Ajouter</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            {{ form_rest(form) }}
+            {{ form_end(form) }}
+
+
         </div>
     </div>
     <br>
@@ -31,6 +93,77 @@
 {% endblock %}
 
 {% block bundle_javascript %}
+    <script type="text/javascript">
+        $(document).ready(function() {
+            // On récupère la balise <div> en question qui contient l'attribut « data-prototype » qui nous intéresse.
+            var $container = $('div#mh_mailbundle_post_bloctexteimage_texte_paragraphes');
+
+            // On définit un compteur unique pour nommer les champs qu'on va ajouter dynamiquement
+            var index = $container.find(':input').length;
+
+            // On ajoute un nouveau champ à chaque clic sur le lien d'ajout.
+            $('#add_paragraphe').click(function(e) {
+                addChamp($container);
+
+                e.preventDefault(); // évite qu'un # apparaisse dans l'URL
+                return false;
+            });
+
+            // On ajoute un premier champ automatiquement s'il n'en existe pas déjà un (cas d'une nouvelle annonce par exemple).
+            if (index == 0) {
+                addChamp($container);
+            } else {
+                // S'il existe déjà des catégories, on ajoute un lien de suppression pour chacune d'entre elles
+                $container.children('div').each(function() {
+                    addDeleteLink($(this));
+                });
+            }
+
+            // La fonction qui ajoute un formulaire CategoryType
+            function addChamp($container) {
+                // Dans le contenu de l'attribut « data-prototype », on remplace :
+                // - le texte "__name__label__" qu'il contient par le label du champ
+                // - le texte "__name__" qu'il contient par le numéro du champ
+                var template = $container.attr('data-prototype')
+                        .replace(/__name__label__/g, 'Paragraphe n°' + (index+1))
+                        .replace(/__name__/g,        index)
+                    ;
+
+                // On crée un objet jquery qui contient ce template
+                var $prototype = $(template);
+
+                // On ajoute au prototype un lien pour pouvoir supprimer la catégorie
+                addDeleteLink($prototype);
+
+                // On ajoute le prototype modifié à la fin de la balise <div>
+                $container.append($prototype);
+
+                // Enfin, on incrémente le compteur pour que le prochain ajout se fasse avec un autre numéro
+                index++;
+            }
+
+            // La fonction qui ajoute un lien de suppression d'une catégorie
+            function addDeleteLink($prototype) {
+                // Création du lien
+                var $deleteLink = $('<a href="#" class="btn btn-danger">Supprimer</a>');
+
+                // Ajout du lien
+                $prototype.append($deleteLink);
+
+                // Ajout du listener sur le clic du lien pour effectivement supprimer la catégorie
+                $deleteLink.click(function(e) {
+                    $prototype.remove();
+
+                    e.preventDefault(); // évite qu'un # apparaisse dans l'URL
+                    return false;
+                });
+            }
+        });
+
+        $("#hide").click(function(){
+            $("#paragraphe").toggle(300);
+        });
+    </script>
 
 {% endblock %}
 
