--- a/src/MH/MailBundle/Resources/views/Template/bloc_photo_texte.html.twig
+++ b/src/MH/MailBundle/Resources/views/Template/bloc_photo_texte.html.twig
@@ -2,21 +2,21 @@
 
                     <tr>
                         <td valign="top" align="center">
-                            <table width="100%" bgcolor="#{{ post.blocphototexte.couleurFond }}" cellspacing="0" cellpadding="10" border="0">
+                            <table width="100%" bgcolor="#{{ post.blocphototexte.couleur }}" cellspacing="0" cellpadding="10" border="0">
                                 <tbody>
                                 <tr>
                                     <td valign="top" style="text-align: right"><a target="_blank" href="{{ post.blocphototexte.lien }}"><img width="180" height="180" alt="{{ post.blocphototexte.image.alt }}" class="fullWidthImage" title="{{ post.blocphototexte.image.description }}" src="{{ post.blocphototexte.image.src }}" /></a></td>
                                     <td valign="top" align="left">
                                         <h2><span style="font-size: small">
                                                 <span style="font-family: Arial">
-                                                    <span style=" color:#{{ post.blocphototexte.couleurTitre }}">
+                                                    <span style=" color:#{{ post.blocphototexte.couleur }}">
                                                         {{ post.blocphototexte.titre }}
                                                     </span>
                                                 </span>
                                             </span>
                                         </h2>
                                         <span style="font-family: Arial;">
-                                            <span style="font-size: x-small; color:#{{ post.blocphototexte.couleurTexte }}">
+                                            <span style="font-size: x-small; color:#{{ post.blocphototexte.couleur }}">
                                                 {{ post.blocphototexte.texte }}
                                             </span>
                                         </span>
