--- a/src/MH/MailBundle/Resources/views/Tool/Couleur/edit.html.twig
+++ b/src/MH/MailBundle/Resources/views/Tool/Couleur/edit.html.twig
@@ -18,7 +18,7 @@
                 </div>
             </div>
         </div>
-        <a class="btn btn-default" href="{{ path('mh_mail_edit', {'id':id} ) }}">Retour</a>
+        <a class="btn btn-default" href="{{ path('mh_mail_couleur_view', {'id':id} ) }}">Retour à la liste des couleurs</a>
     </div>
 
 
