--- a/src/MH/MailBundle/Resources/views/Tool/index.html.twig
+++ b/src/MH/MailBundle/Resources/views/Tool/index.html.twig
@@ -11,6 +11,7 @@
         <div class="well">
             <ul>
                 <li><a class="btn btn-link" href="{{ path('mh_mail_couleur_view') }}">Outil Couleur</a> </li>
+                <li><a class="btn btn-link" href="{{ path('mh_mail_police_view') }}">Outil Police</a> </li>
             </ul>
         </div>
     </div>
