header not working on choice image entity passed must be managed

--- a/src/MH/MailBundle/Resources/views/Tool/Couleur/edit.html.twig
+++ b/src/MH/MailBundle/Resources/views/Tool/Couleur/edit.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block bundle_body %}
-    <h2>Edition Mail</h2>
+    <h2>Edition Police</h2>
     <hr>
     <div id="contain" >
         <div class="well">
