--- a/src/MH/MailBundle/Resources/views/Tool/Image/add.html.twig
+++ b/src/MH/MailBundle/Resources/views/Tool/Image/add.html.twig
@@ -1,19 +1,19 @@
 {% extends "MHMailBundle::layout.html.twig" %}
 
 {% block title %}
-    Edition - {{ parent() }}
+    Selection - {{ parent() }}
 {% endblock %}
 
 {% block bundle_body %}
-    <h2>Edition Police</h2>
+    <h2>Ajout de image</h2>
     <hr>
     <div id="contain" >
         <div class="well">
-           {{ form(form) }}
+            {{ form(form) }}
         </div>
-        <a class="btn btn-default" href="{{ path('mh_mail_police_view', {'id':id} ) }}">Retour à la liste des polices</a>
     </div>
 
+    <a class="btn btn-default" href="{{ path('mh_mail_image_view') }}">Retour à la liste des images</a>
 
 {% endblock %}
 
