--- a/src/MH/MailBundle/Resources/views/Tool/Image/edit.html.twig
+++ b/src/MH/MailBundle/Resources/views/Tool/Image/edit.html.twig
@@ -5,13 +5,13 @@
 {% endblock %}
 
 {% block bundle_body %}
-    <h2>Edition Police</h2>
+    <h2>Edition Image</h2>
     <hr>
     <div id="contain" >
         <div class="well">
            {{ form(form) }}
         </div>
-        <a class="btn btn-default" href="{{ path('mh_mail_police_view', {'id':id} ) }}">Retour à la liste des polices</a>
+        <a class="btn btn-default" href="{{ path('mh_mail_image_view', {'id':id} ) }}">Retour à la liste des images</a>
     </div>
 
 
