--- a/src/MH/MailBundle/Resources/views/Tool/index.html.twig
+++ b/src/MH/MailBundle/Resources/views/Tool/index.html.twig
@@ -13,6 +13,7 @@
                 <li><a class="btn btn-link" href="{{ path('mh_mail_couleur_view') }}">Outil Couleur</a> </li>
                 <li><a class="btn btn-link" href="{{ path('mh_mail_police_view') }}">Outil Police</a> </li>
                 <li><a class="btn btn-link" href="{{ path('mh_mail_image_view') }}">Outil Image</a> </li>
+                <li><a class="btn btn-link" href="{{ path('mh_mail_type_view') }}">Outil Type</a> </li>
             </ul>
         </div>
     </div>
