--- a/src/MH/MailBundle/Resources/views/Tool/Type/edit.html.twig
+++ b/src/MH/MailBundle/Resources/views/Tool/Type/edit.html.twig
@@ -5,20 +5,19 @@
 {% endblock %}
 
 {% block bundle_body %}
-    <h2>Edition Image</h2>
+    <h2>Edition Type</h2>
     <hr>
     <div id="contain" >
         <div class="well">
            {{ form(form) }}
         </div>
-        <a class="btn btn-default" href="{{ path('mh_mail_image_view', {'id':id} ) }}">Retour à la liste des images</a>
+        <a class="btn btn-default" href="{{ path('mh_mail_type_view', {'id':id} ) }}">Retour à la liste des types</a>
     </div>
 
 
 {% endblock %}
 
 {% block bundle_javascript %}
-
 
 {% endblock %}
 
