--- a/src/MH/MailBundle/Resources/views/Tool/Type/view.html.twig
+++ b/src/MH/MailBundle/Resources/views/Tool/Type/view.html.twig
@@ -21,18 +21,18 @@
                             </td>
 
                             <td width="25%" align="center">
-                                {{ type.src }}
+                                {{ type.imgsrc }}
                             </td>
 
                             <td width="25%" align="center">
-                                {{ type.alt }}
+                                {{ type.imgalt }}
                             </td>
 
                             <td width="10%" align="center">
-                                <a class="btn btn-warning" href="{{ path('mh_mail_type_edit', {'id': police.id} ) }}"> Modifier</a>
+                                <a class="btn btn-warning" href="{{ path('mh_mail_type_edit', {'id': type.id} ) }}"> Modifier</a>
                             </td>
                             <td width="10%" align="center">
-                                <a class="btn btn-danger" href="{{ path('mh_mail_type_delete', {'id': police.id}) }}"> Supprimer</a>
+                                <a class="btn btn-danger" href="{{ path('mh_mail_type_delete', {'id': type.id}) }}"> Supprimer</a>
                             </td>
                         </tr>
                     {% endfor %}
