--- a/src/MH/MailBundle/Resources/views/Mail/index.html.twig
+++ b/src/MH/MailBundle/Resources/views/Mail/index.html.twig
@@ -13,7 +13,7 @@
             <li  id="mail_{{ mail.id }}">
                 <div class="panel panel-default">
 
-                    <div class="panel-body" data-toggle="collapse" data-target="#info{{ mail.id }}">
+                    <div class="panel-body" data-toggle="collapse" data-target="#info{{ type.id }}">
                         <h3>{{ mail.name }} </h3>
                         <i>   crée le {{ mail.date|date("d/m/Y à H:i:s", "Europe/Paris")|raw }} par {{ mail.auteur }}</i>
                         <br>
