--- a/src/MH/MailBundle/Resources/views/PostType/select.html.twig
+++ b/src/MH/MailBundle/Resources/views/PostType/select.html.twig
@@ -7,23 +7,39 @@
 {% block bundle_body %}
     <h2>Selection type de Post</h2>
     <hr>
+     <div class="panel-group" id="accordion">
         <ul class="list-unstyled type-sortable">
             {% for type in listPostType | sortbyfield('position') %}
                 <li  id="type_{{ type.id }}">
-                <div class="row">
-                        <div class="col-md-3">
-                            <h3><a class="btn btn-link" href="{{ path('mh_mail_'~type.slug|lower~'_add', {'id':id}) }}">{{ type.name }}</a> </h3>
+                    <div class="panel panel-info">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#type{{ type.id }}">
+                                    {{ type.name }}
+                                </a>
+                            </h4>
                         </div>
-                        <div class="col-md-9">
-                            <img src="{{ asset('bundles/mhmail/images/' ~ type.imgsrc) }}" alt="{{ type.imgalt }}"  width="700" align="top" />
-                            <br>
-                            <br>
-                            <br>
+                        <div id="type{{ type.id }}" class="panel-collapse collapse">
+                            <div class="panel-body" data-toggle="collapse" data-target="#type{{ type.id }}">
+                                <div class="row">
+                                    <div class="col-md-3">
+                                        <h3><a class="btn btn-primary" href="{{ path('mh_mail_'~type.slug|lower~'_add', {'id':id}) }}">Ajouter {{ type.name }}</a></h3>
+                                    </div>
+                                    <div class="col-md-9">
+                                        <img src="{{ asset('bundles/mhmail/images/' ~ type.imgsrc) }}" alt="{{ type.imgalt }}"  width="700" align="top" />
+                                        <br>
+                                        <br>
+                                        <br>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        </div>
+                    </div>
+                    <br>
                 </li>
             {% endfor %}
         </ul>
+     </div>
     <br>
     <a class="btn btn-default" href="{{ path('mh_mail_edit', {'id': id}) }}">Retour</a>
 
