Agenda Working need to clear the html code and add support of size and color link

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -24,6 +24,9 @@
             body {
                 overflow-y: scroll;
             }
+            .scroll {
+                position:relative;
+            }
         </style>
     {% endblock %}
 </head>
