--- a/src/MH/MailBundle/Resources/views/PostType/agenda.html.twig
+++ b/src/MH/MailBundle/Resources/views/PostType/agenda.html.twig
@@ -10,11 +10,11 @@
     <div id="contain" >
         <div class="well">
             <h4>Rendu Actuel</h4>
-            {% if post.agenda is not null %}
+            {#{% if post.agenda is not null %}
                 {% include "MHMailBundle:Template:agenda.html.twig" ignore missing %}
-            {% else %}
+            {% else %}#}
                 <img src="{{ asset('bundles/mhmail/images/'~post.slug~'.jpg') }}" alt="Exemple de rendu de agenda" width="700"  />"
-            {% endif %}
+            {#{% endif %}#}
             <hr>
             {{ form(form) }}
         </div>
