Add loading tools fixtures Agenda now should work well form is great

--- a/src/MH/MailBundle/Resources/views/Template/agenda.html.twig
+++ b/src/MH/MailBundle/Resources/views/Template/agenda.html.twig
@@ -40,9 +40,9 @@
                                             </tbody>
                                         </table>
                                     </td>
-                                    <td width="40%" valign="top" align="left" style="padding-left: 5px"><font size="2" face="Arial"><b><span style="color:#{{ post.agenda.couleur }}"><a href="{{ post.agenda.liens[0].href }}">{{ post.agenda.liens[0].texte }}</a></span></b><span style="font-size: small"><b><br />
-                                                        </b></span></font><br />
-                                        <font size="2" face="Arial">                                     <span style="font-size: x-small">{{ post.agenda.texte1 }}<br />
+                                    <td width="40%" valign="center" align="left" style="padding-left: 5px"><font size="2" face="Arial"><b><span style="color:#{{ post.agenda.couleur }}"><a href="{{ post.agenda.liens[0].href }}">{{ post.agenda.liens[0].texte }}</a></span></b><span style="font-size: small"><b><br />
+                                                        </b></span></font>
+                                        <font size="2" face="Arial">                                     <span style="font-size: {{ post.agenda.police }}px;">{{ post.agenda.texte1 }}<br />
                                                         </span>                                     </font></td>
                                     <td width="10%" valign="top" align="left">
                                         <table width="80" cellspacing="0" cellpadding="0" border="0" style="border-top: #cccccc 1px solid; border-right: #cccccc 1px solid; border-bottom: #cccccc 1px solid; border-left: #cccccc 1px solid; background-color: #ffffff">
@@ -64,9 +64,9 @@
                                             </tbody>
                                         </table>
                                     </td>
-                                    <td width="40%" valign="top" align="left" style="padding-left: 5px"><font size="2" face="Arial"><b><a target="_blank" href="{{ post.agenda.liens[1].href }}">{{ post.agenda.liens[1].texte }}<br />
-                                                </a></b></font><br />
-                                        <span style="font-family: Arial"><span style="font-size: x-small">{{ post.agenda.texte2 }}</span></span></td>
+                                    <td width="40%" valign="center" align="left" style="padding-left: 5px"><font size="2" face="Arial"><b><a target="_blank" href="{{ post.agenda.liens[1].href }}">{{ post.agenda.liens[1].texte }}<br />
+                                                </a></b></font>
+                                        <span style="font-family: Arial"><span style="font-size:{{ post.agenda.police }}px;">{{ post.agenda.texte2 }}</span></span></td>
                                 </tr>
                                 </tbody>
                             </table>
@@ -97,9 +97,9 @@
                                             </tbody>
                                         </table>
                                     </td>
-                                    <td width="40%" valign="top" align="left" style="padding-left: 5px"><font size="2" face="Arial"><b><a target="_blank" href="{{ post.agenda.liens[2].href }}">{{ post.agenda.liens[2].texte }}<br />
-                                                </a></b></font><br />
-                                        <span style="font-family: Arial"><span style="font-size: x-small">{{ post.agenda.texte4 }}</span></span></td>
+                                    <td width="40%" valign="center" align="left" style="padding-left: 5px"><font size="2" face="Arial"><b><a target="_blank" href="{{ post.agenda.liens[2].href }}">{{ post.agenda.liens[2].texte }}<br />
+                                                </a></b></font>
+                                        <span style="font-family: Arial"><span style="font-size: {{ post.agenda.police }}px;">{{ post.agenda.texte3 }}</span></span></td>
                                     <td width="10%" valign="top" align="left">
                                         <table width="80" cellspacing="0" cellpadding="0" border="0" style="border-top: #cccccc 1px solid; border-right: #cccccc 1px solid; border-bottom: #cccccc 1px solid; border-left: #cccccc 1px solid; background-color: #ffffff">
                                             <tbody>
@@ -120,9 +120,9 @@
                                             </tbody>
                                         </table>
                                     </td>
-                                    <td width="40%" valign="top" align="left" style="padding-left: 5px"><font size="2" face="Arial"><b><a target="_blank" href="{{ post.agenda.liens[3].href }}">{{ post.agenda.liens[3].texte }}<br />
-                                                </a></b></font><br />
-                                        <span style="font-family: Arial"><span style="font-size: x-small">{{ post.agenda.texte4 }}</span></span></td>
+                                    <td width="40%" valign="center" align="left" style="padding-left: 5px"><font size="2" face="Arial"><b><a target="_blank" href="{{ post.agenda.liens[3].href }}">{{ post.agenda.liens[3].texte }}<br />
+                                                </a></b></font>
+                                        <span style="font-family: Arial"><span style="font-size:{{ post.agenda.police }}px;">{{ post.agenda.texte4 }}</span></span></td>
                                 </tr>
                                 </tbody>
                             </table>
