--- a/src/MH/MailBundle/Resources/views/PostType/agenda.html.twig
+++ b/src/MH/MailBundle/Resources/views/PostType/agenda.html.twig
@@ -10,13 +10,119 @@
     <div id="contain" >
         <div class="well">
             <h4>Rendu Actuel</h4>
-            {#{% if post.agenda is not null %}
-                {% include "MHMailBundle:Template:agenda.html.twig" ignore missing %}
-            {% else %}#}
+            {% if post.agenda is not null %}
+                <table cellspacing="0" cellpadding="0" border="0" bgcolor="#ffffff" width="600">
+                    <tbody>
+                    {% include "MHMailBundle:Template:agenda.html.twig" ignore missing %}
+                    </tbody>
+                </table>
+            {% else %}
                 <img src="{{ asset('bundles/mhmail/images/'~post.slug~'.jpg') }}" alt="Exemple de rendu de agenda" width="700"  />"
-            {#{% endif %}#}
+            {% endif %}
             <hr>
-            {{ form(form) }}
+            {{ form_start(form) }}
+            {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
+            {{ form_errors(form) }}
+            <div class="row">
+                <div class="form-group">
+                    <div class="col-sm-2">
+                        <h3>Date 1</h3>
+                    </div>
+                    <div class="col-sm-3">
+                        {{ form_row(form.jour1) }}
+                    </div>
+                    <div class="col-sm-3">
+                        {{ form_row(form.mois1) }}
+                    </div>
+                    <div class="col-sm-4">
+                        {{ form_row(form.texte1) }}
+                    </div>
+                    <div class="col-sm-2">
+                        <h3>Date 2</h3>
+                    </div>
+                    <div class="col-sm-3">
+                        {{ form_row(form.jour2) }}
+                    </div>
+                    <div class="col-sm-3">
+                        {{ form_row(form.mois2) }}
+                    </div>
+                    <div class="col-sm-4">
+                        {{ form_row(form.texte2) }}
+                    </div>
+                    <div class="col-sm-2">
+                        <h3>Date 3</h3>
+                    </div>
+                    <div class="col-sm-3">
+                        {{ form_row(form.jour3) }}
+                    </div>
+                    <div class="col-sm-3">
+                        {{ form_row(form.mois3) }}
+                    </div>
+                    <div class="col-sm-4">
+                        {{ form_row(form.texte3) }}
+                    </div>
+                    <div class="col-sm-2">
+                        <h3>Date 4</h3>
+                    </div>
+                    <div class="col-sm-3">
+                        {{ form_row(form.jour4) }}
+                    </div>
+                    <div class="col-sm-3">
+                        {{ form_row(form.mois4) }}
+                    </div>
+                    <div class="col-sm-4">
+                        {{ form_row(form.texte4) }}
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <br>
+                <hr>
+                <br>
+                {% set var = 0 %}
+                <div class="form-group">
+                {% for lien in form.liens %}
+                    {%  set var = var + 1 %}
+                    <div class="form-group">
+                        <div class="row">
+                            <div class="col-sm-1">
+                                <br>
+                                 {{ var }}
+                            </div>
+                            <div class="col-sm-3">
+                                {{ form_row(lien.texte.texte) }}
+                            </div>
+                            <div class="col-sm-3">
+                                {{ form_row(lien.href) }}
+                            </div>
+                            <div class="col-sm-3">
+                                {{ form_row(lien.alt) }}
+                            </div>
+                            <div class="col-sm-2">
+                                <br>
+                                {{ form_row(lien.target) }}
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+                </div>
+
+                <div class="form-group">
+                    <div class="col-sm-3 col-sm-offset-2">
+                        {{ form_row(form.couleur) }}
+                    </div>
+                    <div class="col-sm-3 ">
+                        {{ form_row(form.police) }}
+                    </div>
+                    <div class="col-sm-2">
+                            <br>
+                        {{ form_rest(form) }}
+                    </div>
+                </div>
+
+            </div>
+
+
         </div>
     </div>
     <br>
