--- a/src/MH/MailBundle/Resources/views/Template/agenda.html.twig
+++ b/src/MH/MailBundle/Resources/views/Template/agenda.html.twig
@@ -1,20 +1,20 @@
                     <!-- Début Bloc Agenda ESIEA -->
-
                     <tr>
-                        <td valign="top" align="center">
+                        <td valign="center">
                             <table width="100%" cellspacing="0" cellpadding="0" border="0">
                                 <tbody>
-                                <tr>
-                                    <td valign="bottom" align="center" style="padding-top: 20px">
-                                        <h2><span style="font-size: medium"><font color="#{{ post.agenda.couleur }}" face="Arial, Sans Serif">Agenda</font></span></h2>
-                                    </td>
-                                </tr>
-                                </tbody>
-                            </table>
-                        </td>
+
+                    <tr>
+                        <td width="10%" valign="center" align="center">&nbsp;</td>
                     </tr>
                     <tr>
-                        <td valign="top" align="center">
+                        <td valign="center" bgcolor="#{{ post.agenda.couleur }}" align="center" height="35"><b><span style="font-size: 18px; font-family: Arial, sans-serif; color: #ffffff">                                         <!-- A MODIFIER ICI TEXTE DE TRANSITION DE SECTION -->                                          Agenda                                                                                  <!-- FIN -->                                     </span>                                     </b></td>
+                    </tr>
+                    <tr>
+                        <td valign="top" height="10">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td width="5%" valign="center" align="center">
                             <table width="100%" cellspacing="0" cellpadding="5" border="0">
                                 <tbody>
                                 <tr>
@@ -26,9 +26,7 @@
                                                     <table width="100%" cellspacing="0" cellpadding="0" border="0">
                                                         <tbody>
                                                         <tr>
-                                                            <td valign="top" align="center" style="font-size: 12px; font-family: Helvetica, Arial, sans-serif; font-weight: bold; color: #ffffff; padding-bottom: 5px; text-align: center; padding-top: 5px; background-color:#{{ post.agenda.couleur }}">
-                                                                {{ post.agenda.mois1 }}
-                                                            </td>
+                                                            <td valign="top" align="center" style="font-size: 12px; font-family: Helvetica, Arial, sans-serif; font-weight: bold; color: #ffffff; padding-bottom: 5px; text-align: center; padding-top: 5px; background-color:#{{ post.agenda.couleur }}">{{ post.agenda.mois1 }}</td>
                                                         </tr>
                                                         <tr>
                                                             <td valign="top" align="center" style="font-size: 25px; font-family: Helvetica, Arial, sans-serif; font-weight: bold; color:#{{ post.agenda.couleur }}; padding-bottom: 8px; text-align: center; padding-top: 8px; letter-spacing: -1px; line-height: 100%">{{ post.agenda.jour1 }}</td>
@@ -40,10 +38,11 @@
                                             </tbody>
                                         </table>
                                     </td>
-                                    <td width="40%" valign="center" align="left" style="padding-left: 5px"><font size="2" face="Arial"><b><span style="color:#{{ post.agenda.couleur }}"><a href="{{ post.agenda.liens[0].href }}">{{ post.agenda.liens[0].texte }}</a></span></b><span style="font-size: small"><b><br />
-                                                        </b></span></font>
-                                        <font size="2" face="Arial">                                     <span style="font-size: {{ post.agenda.police }}px;">{{ post.agenda.texte1 }}<br />
-                                                        </span>                                     </font></td>
+                                    <td width="40%" valign="center" align="left" style="padding-left: 5px"><font size="3" face="Arial"><b><span style="color:#{{ post.agenda.couleur }}"><a href="{{ post.agenda.liens[0].href }}">{{ post.agenda.liens[0].texte }}</a></span></b><span style="font-size: small"><b><br />
+                                                </b></span></font><br />
+                                        <span style="font-family: Arial, sans-serif;font-size: {{ post.agenda.police }}px;">
+                                            {{ post.agenda.texte1 }}<br />
+                                        </span></td>
                                     <td width="10%" valign="top" align="left">
                                         <table width="80" cellspacing="0" cellpadding="0" border="0" style="border-top: #cccccc 1px solid; border-right: #cccccc 1px solid; border-bottom: #cccccc 1px solid; border-left: #cccccc 1px solid; background-color: #ffffff">
                                             <tbody>
@@ -64,16 +63,16 @@
                                             </tbody>
                                         </table>
                                     </td>
-                                    <td width="40%" valign="center" align="left" style="padding-left: 5px"><font size="2" face="Arial"><b><a target="_blank" href="{{ post.agenda.liens[1].href }}">{{ post.agenda.liens[1].texte }}<br />
-                                                </a></b></font>
-                                        <span style="font-family: Arial"><span style="font-size:{{ post.agenda.police }}px;">{{ post.agenda.texte2 }}</span></span></td>
+                                    <td width="40%" valign="top" align="left" style="padding-left: 5px"><font size="3" face="Arial"><b><a target="_blank" href="{{ post.agenda.liens[1].href }}">{{ post.agenda.liens[1].texte }}<br />
+                                                </a></b></font><br />
+                                        <span style="font-family: Arial;font-size: {{ post.agenda.police }}px;">{{ post.agenda.texte2 }}</span></td>
                                 </tr>
                                 </tbody>
                             </table>
                         </td>
                     </tr>
                     <tr>
-                        <td valign="top" align="center">
+                        <td width="5%" valign="top" align="center">
                             <table width="100%" cellspacing="0" cellpadding="5" border="0">
                                 <tbody>
                                 <tr>
@@ -97,9 +96,9 @@
                                             </tbody>
                                         </table>
                                     </td>
-                                    <td width="40%" valign="center" align="left" style="padding-left: 5px"><font size="2" face="Arial"><b><a target="_blank" href="{{ post.agenda.liens[2].href }}">{{ post.agenda.liens[2].texte }}<br />
-                                                </a></b></font>
-                                        <span style="font-family: Arial"><span style="font-size: {{ post.agenda.police }}px;">{{ post.agenda.texte3 }}</span></span></td>
+                                    <td width="40%" valign="top" align="left" style="padding-left: 5px"><font size="3" face="Arial"><b><a target="_blank" href="{{ post.agenda.liens[2].href }}">{{ post.agenda.liens[2].texte }}<br />
+                                                </a></b></font><br />
+                                        <span style="font-family: Arial;font-size: {{ post.agenda.police }}px;">{{ post.agenda.texte3 }}</span></td>
                                     <td width="10%" valign="top" align="left">
                                         <table width="80" cellspacing="0" cellpadding="0" border="0" style="border-top: #cccccc 1px solid; border-right: #cccccc 1px solid; border-bottom: #cccccc 1px solid; border-left: #cccccc 1px solid; background-color: #ffffff">
                                             <tbody>
@@ -120,13 +119,18 @@
                                             </tbody>
                                         </table>
                                     </td>
-                                    <td width="40%" valign="center" align="left" style="padding-left: 5px"><font size="2" face="Arial"><b><a target="_blank" href="{{ post.agenda.liens[3].href }}">{{ post.agenda.liens[3].texte }}<br />
-                                                </a></b></font>
-                                        <span style="font-family: Arial"><span style="font-size:{{ post.agenda.police }}px;">{{ post.agenda.texte4 }}</span></span></td>
+                                    <td width="40%" valign="top" align="left" style="padding-left: 5px"><font size="3" face="Arial"><b><a target="_blank" href="{{ post.agenda.liens[3].href }}">{{ post.agenda.liens[3].texte }}<br />
+                                                </a></b></font><br />
+                                        <span style="font-family: Arial;font-size: {{ post.agenda.police }}px;">{{ post.agenda.texte4 }}</span></td>
                                 </tr>
+                                </tbody>
+                            </table>
+                            <!--  #### Fin Date #### --></td>
+                    </tr>
                                 </tbody>
                             </table>
                         </td>
                     </tr>
+
 
                     <!-- Fin Bloc Agenda ESIEA -->
