add download feature for mail and newsletter

--- a/src/MH/MailBundle/Resources/views/Mail/edit.html.twig
+++ b/src/MH/MailBundle/Resources/views/Mail/edit.html.twig
@@ -60,6 +60,10 @@
                     </a>
                 </div>
             </div>
+            <a href="{{ path('mh_mail_home') }}" class="btn btn-link">
+                <span class="glyphicon glyphicon-backward"></span>
+                Retour
+            </a>
 
         </div>
 
