--- a/src/MH/MailBundle/Resources/views/Mail/index.html.twig
+++ b/src/MH/MailBundle/Resources/views/Mail/index.html.twig
@@ -35,7 +35,7 @@
                                     </a>
                                 </div>
                                 <div class="col-md-2 col-sm-6 col-xs-12">
-                                    <a href="{{ path('mh_mail_view',{'id':mail.id}) }}" class="btn btn-success">
+                                    <a href="{{ path('mh_mail_download',{'id':mail.id}) }}" class="btn btn-success">
                                         <span class="glyphicon glyphicon-download"></span>
                                         Telecharger
                                     </a>
