--- a/src/MH/NewsletterBundle/Resources/views/Newsletter/index.html.twig
+++ b/src/MH/NewsletterBundle/Resources/views/Newsletter/index.html.twig
@@ -36,7 +36,7 @@
                                     </a>
                                 </div>
                                 <div class="col-md-2 col-sm-6 col-xs-12">
-                                    <a href="{{ path('mh_newsletter_view',{'id':newsletter.id}) }}" class="btn btn-success">
+                                    <a href="{{ path('mh_newsletter_download',{'id':newsletter.id}) }}" class="btn btn-success">
                                         <span class="glyphicon glyphicon-download"></span>
                                         Telecharger
                                     </a>
